--- a/movie-dev.yml
+++ b/movie-dev.yml
@@ -5,7 +5,7 @@ server:
 spring:
   application:
     name: microservice-movie
-  #网关向zipkin服务器发送信息的配置
+  #微服务消费方movie向zipkin服务器发送信息的配置
   zipkin:
     base-url: http://192.168.17.1:9041
     sender:
